--- a/vercel.json
+++ b/vercel.json
@@ -11,6 +11,11 @@
         "src": "/(.*)",
         "dest": "/app.py"
       }
-    ]
+    ],
+    "functions": {
+    "api/**": {
+      "excludeFiles": "{.next,*.cache,node_modules,public,app}/**"
+    }
+  }
   }
   
